# jdi

./: .gitignore  Makefile  configure.sh  pyproject.toml
jdi/: __init__.py  derivs.py  odeint.py
test/: test_derivs.py  test_odeint.py
